--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "crud-next-radix-sqlite",
-  "version": "0.1.0",
+  "name": "ts-fs",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,11 +13,10 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
-    "@types/better-sqlite3": "^7.6.13",
-    "better-sqlite3": "12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "16.1.6",
+    "postgres": "^3.4.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
